tests/compile-fail/legacy_eviction_options.rs
#[salsa::tracked(lru = 4000)]
fn legacy_lru(_db: &dyn salsa::Database) {}

fn main() {}
